tweak page height to fix gap below footer on some views

--- a/css/guide.styl
+++ b/css/guide.styl
@@ -1,7 +1,7 @@
 #guide
   background: $white
   color: $darkgrey
-  padding: 6em 1em 15em
+  padding: 6em 1em 10em
   
   h2
   h3
